--- a/web/index.html
+++ b/web/index.html
@@ -268,6 +268,34 @@
                         </tr>
                     </tbody>
                 </table>
+                <h3>Numpad Keys</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Key</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><code>NUM_0</code> - <code>NUM_9</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>NUM_ASTERIX</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>NUM_ENTER</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>NUM_MINUS</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>NUM_DOT</code></td>
+                        </tr>
+                        <tr>
+                            <td><code>NUM_PLUS</code></td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
         </main>
         <footer>
